1.21.8 mini update during java update from 8 to 17